--- a/src/app/features/bank-accounts/components/bank-account-save/bank-account-save.component.html
+++ b/src/app/features/bank-accounts/components/bank-account-save/bank-account-save.component.html
@@ -16,9 +16,8 @@
       <mat-form-field appearance="standard" class="w45">
         <mat-label>Account Number</mat-label>
         <label>
-          <input matInput #numberInput maxlength='30' name='number' formControlName='number'/>
+          <input matInput name='number' formControlName='number'/>
         </label>
-        <mat-hint align="end">{{numberInput.value?.length || 0}}/30</mat-hint>
       </mat-form-field>
     </div>
 
