--- a/src/app/features/auth/components/login/login.component.html
+++ b/src/app/features/auth/components/login/login.component.html
@@ -5,7 +5,7 @@
     <mat-card-header>
       <mat-card-title>
         <div class="centered-text">
-          <img alt='logo' src="https://vitapharmacy.ελ/media/uploads/2020/03/apple-touch-icon.png">
+          <img alt='logo' src="https://vita-pharmacy.gr/content/uploads/2020/03/apple-touch-icon.png">
         </div>
       </mat-card-title>
     </mat-card-header>
